<resources>
    <string name="app_name">fimatic</string>
    <string name="ir_atras_txt">Boton para ir a la pantalla anterior</string>
    <string name="scroll_desc">Zona donde se encuentrar los bloques colocados se puede scrollear</string>
    <string name="Start_Desc">Boton para iniciar la animación</string>
    <string name="inicio_desc">Bloque que marca el inicio de la secuencia</string>
    <string name="cred_txt">Creado por: Nicolás Leiton</string>
    <string name="abajo_desc">Boton para ir a la siguiente seccion de niveles</string>
    <string name="ajustes">Ajustes</string>
    <string name="empezar">Empezar</string>
    <string name="salir">Salir</string>
    <string name="fimatic">FIMATIC</string>
    <string name="niveles">Niveles</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="encender_bluetooth">Encender Bluetooth</string>
    <string name="derecha">Derecha</string>
    <string name="adelante">Adelante</string>
    <string name="izquierda">Izquierda</string>
    <string name="bloques">Bloques</string>
    <string name="tu_logica">Tu lógica</string>
    <string name="conectar">Conectar</string>
    <string name="dispositivos_bt">Dispositivos BT</string>
</resources>