<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="140dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/fimatic"
            android:textColor="@color/white"
            android:textSize="52sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/bot_empezar"
            android:layout_width="245dp"
            android:layout_height="50dp"
            android:background="@drawable/default_button"
            android:fontFamily="@font/iceberg"
            android:onClick="ir_niveles"
            android:text="@string/empezar"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/bot_config"
            android:layout_width="245dp"
            android:layout_height="50dp"
            android:background="@drawable/default_button"
            android:fontFamily="@font/iceberg"
            android:onClick="ir_ajustes"
            android:text="@string/ajustes"
            android:textColor="@color/black"
            android:textSize="28sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"
            tools:layout_editor_absoluteX="-204dp"
            tools:layout_editor_absoluteY="735dp" />

        <Button
            android:id="@+id/bot_salir"
            android:layout_width="245dp"
            android:layout_height="50dp"
            android:background="@drawable/default_button"
            android:fontFamily="@font/iceberg"
            android:text="@string/salir"
            android:textColor="@color/black"
            android:textSize="28sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_creditos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/iceberg"
        android:text="@string/cred_txt"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>