<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    tools:context=".Settings">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_weight="1"
        android:background="@color/back_color"
        android:contentDescription="@string/ir_atras_txt"
        android:onClick="ir_home"
        android:src="@drawable/atras2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/iceberg"
            android:text="@string/fimatic"
            android:textColor="@color/white"
            android:textSize="52sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Switch
            android:id="@+id/Blout_switch"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:checked="false"
            android:elegantTextHeight="true"
            android:fontFamily="@font/iceberg"
            android:gravity="center"
            android:scrollbarSize="10dp"
            android:text="@string/encender_bluetooth"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <Button
            android:id="@+id/devices_buttom"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/default_button"
            android:fontFamily="@font/iceberg"
            android:text="Dispositivos BT"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="invisible" />

        <Spinner
            android:id="@+id/Devices_spinner"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@color/purpura"
            android:visibility="invisible" />

        <Button
            android:id="@+id/connect_bt"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/default_button"
            android:fontFamily="@font/iceberg"
            android:text="Conectar"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:visibility="invisible" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>